room.html+room.css 2מעודכן

--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -26,7 +26,7 @@
 						<br>
 						<li>daniel</li>
 						<br>
-						<li>adi &nbsp;<image src="myTurn.png"></image></li>
+						<li>adi &nbsp;<image src="../../common/images/giphy-downsized.gif" height="25" width="25"></image></li> <!--image=my turn-->
                         <br>
                         <li>daniel</li>
                         <br>
@@ -190,15 +190,15 @@
 				<h2>Game Details</h2>
 				<table border="1" align=center width=75%>
 					<tr>
-						<td><b>total Hand chips</b></td>
+						<td><b>Total Hand chips</b></td>
 						<td>150</td>
 					</tr>
 					<tr>
 						<td><b>Hand number</b></td>
 						<td>
-                            3
-                            /
-                            5
+                            <label>3</label>
+                            <label>/</label>
+                            <label>5</label>
                         </td>
 					</tr>
 					<tr>
@@ -209,9 +209,18 @@
 						<td><b>Small</b></td>
 						<td id="smallValue">10</td>
 					</tr>
+                    <tr>
+                        <td><b>buy</b></td>
+                        <td id="buyValue">100</td>
+                    </tr>
+
+
 
 				</table>
-
+                <br><br>
+                <h3>My card</h3>
+                <br><br>
+                &nbsp;<img src="../../common/images/back.png" Height="150.0" Width="100.0">&nbsp;<img src="../../common/images/back.png"  Height="150.0" Width="100.0">
 			</td>
 
 
