Code refactoring and few bug fixes

--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -210,8 +210,12 @@
 						<td id="smallValue">10</td>
 					</tr>
                     <tr>
-                        <td><b>buy</b></td>
+                        <td><b>Buy</b></td>
                         <td id="buyValue">100</td>
+                    </tr>
+                    <tr>
+                        <td><b>Status</b></td>
+                        <td id="statusValue">100</td>
                     </tr>
 
 
