room.html+room.css 3מעודכן

--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -227,7 +227,7 @@
                 <br><br>
                 <h3>My card</h3>
                 <br><br>
-                &nbsp;<img src="../../common/images/back.png" Height="150.0" Width="100.0">&nbsp;<img src="../../common/images/back.png"  Height="150.0" Width="100.0">
+                &nbsp;<img src="../../common/images/back.png" Height="150.0" Width="100.0" class="myCard" >&nbsp;<img src="../../common/images/back.png"  Height="150.0" Width="100.0">
 			</td>
 
 
