--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -103,6 +103,7 @@
 
 					</tr>
 
+
                     <tr>
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
@@ -119,6 +120,7 @@
                         </td>
 
                         <td>
+                            &nbsp;&nbsp;<label>Preve Action:</label>&nbsp;<label>C</label>
 
                             <div class="main">
                                 <div class="table">
