add players to game

--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -60,7 +60,20 @@
 					<tr>
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
-                            <div class="card"   valign="top">
+                            <div id="seat1" class="card" valign="top">
+                                <h3 style=text-align:center>John Doe</h3>
+                                <p><b>type:</b>H</p> <!--here the user type-->
+                                <p ><b>state:</b> D</p><!--here the user state-->
+                                <p ><b>chips:</b> 250</p><!--here the user chips-->
+                                <p><b>buys:</b> 3</p><!--here the user buys-->
+                                <p ><b>Hand_Won:</b> 5/10</p><!--here the user Hand_Won-->
+                            </div>
+                        </td>
+
+
+                        <td width="170px" valign="top">
+                            <!--כאן יכול להיכנס שחקן-->
+                            <div id="seat2" class="card"   valign="top">
                                 <h3 style=text-align:center>John Doe</h3>
                                 <p ><b>type:</b> H</p> <!--here the user type-->
                                 <p ><b>state:</b> D</p><!--here the user state-->
@@ -72,24 +85,9 @@
 
                         </td>
 
-
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
-                            <div class="card"   valign="top">
-                                <h3 style=text-align:center>John Doe</h3>
-                                <p ><b>type:</b> H</p> <!--here the user type-->
-                                <p ><b>state:</b> D</p><!--here the user state-->
-                                <p ><b>chips:</b> 250</p><!--here the user chips-->
-                                <p><b>buys:</b> 3</p><!--here the user buys-->
-                                <p ><b>Hand_Won:</b> 5/10</p><!--here the user Hand_Won-->
-
-                            </div>
-
-                        </td>
-
-                        <td width="170px" valign="top">
-                            <!--כאן יכול להיכנס שחקן-->
-                            <div class="card"   valign="top">
+                            <div id="seat3" class="card"   valign="top">
                                 <h3 style=text-align:center>John Doe</h3>
                                 <p ><b>type:</b> H</p> <!--here the user type-->
                                 <p ><b>state:</b> D</p><!--here the user state-->
@@ -107,7 +105,7 @@
                     <tr>
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
-                            <div class="card"   valign="top">
+                            <div id="seat4" class="card"   valign="top">
                                 <h3 style=text-align:center>John Doe</h3>
                                 <p ><b>type:</b> H</p> <!--here the user type-->
                                 <p ><b>state:</b> D</p><!--here the user state-->
@@ -159,7 +157,7 @@
                         </td>
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
-                            <div class="card"   valign="top">
+                            <div id="seat5" class="card"   valign="top">
                                 <h3 style=text-align:center>John Doe</h3>
                                 <p ><b>type:</b> H</p> <!--here the user type-->
                                 <p ><b>state:</b> D</p><!--here the user state-->
@@ -179,7 +177,7 @@
                             </td>
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
-                            <div class="card"   valign="top">
+                            <div id="seat6" class="card"   valign="top">
                                 <h3 style=text-align:center>John Doe</h3>
                                  <p ><b>type:</b> H</p> <!--here the user type-->
                                 <p ><b>state:</b> D</p><!--here the user state-->
