more room js changes

--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -201,14 +201,14 @@
 				<table border="1" align=center width=75%>
 					<tr>
 						<td><b>Total Hand chips</b></td>
-						<td>150</td>
+						<td id="maxPot">150</td>
 					</tr>
 					<tr>
 						<td><b>Hand number</b></td>
 						<td>
-                            <label>3</label>
+                            <label id="handNumber">0</label>
                             <label>/</label>
-                            <label>5</label>
+                            <label id="handsCount">5</label>
                         </td>
 					</tr>
 					<tr>
