add error message when trying to upload game file that already exsits

--- a/chatWebApp/web/pages/PokerLobby/lobby.html
+++ b/chatWebApp/web/pages/PokerLobby/lobby.html
@@ -19,7 +19,7 @@
             <b>Upload game file</b>
             <form id="uploadForm" name="form1" method="POST" action="/upload" enctype="multipart/form-data" align="center">
                 <input type="file" name="file1" accept=".xml">
-                <input id="uploadFileButton" type="Submit" value="Upload File">
+                <input id="uploadFileButton" type="Submit" value="Upload File" disabled>
             </form>
             <div id="result">
             </div>
