add logout button

--- a/chatWebApp/web/pages/PokerLobby/lobby.html
+++ b/chatWebApp/web/pages/PokerLobby/lobby.html
@@ -23,6 +23,8 @@
             </form>
             <div id="result">
             </div>
+
+            <button id="logoutButton" onclick=Logout()>Logout</button>
         </td>
     </tr>
 </table>
