--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -233,10 +233,10 @@
 
 				</table>
                 <br><br>
-                <h3>My card</h3>
-                <br><br>
-                &nbsp;<img src="../../common/images/back.png" Height="150.0" Width="100.0" class="myCard" >&nbsp;<img src="../../common/images/back.png"  Height="150.0" Width="100.0">
-			</td>
+                <h3>My cards</h3>
+                <img src="../../common/images/back.png" Height="150.0" Width="100.0" class="myCards">
+                <img src="../../common/images/back.png" Height="150.0" Width="100.0" class="myCards">
+            </td>
 
 
 		</tr>
