--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -36,21 +36,21 @@
 					</ul>
 
                 <br><br>
-                <button id="callButton" type="button">Call</button>
+                <button id="callButton" type="button" disabled>Call</button>
                 &nbsp;&nbsp;&nbsp;&nbsp;
-                <button id="checkButton" type="button">Check</button>
+                <button id="checkButton" type="button" disabled>Check</button>
                 <br><br>
-                <button id="foldButton" type="button">Fold</button>
+                <button id="foldButton" type="button" disabled>Fold</button>
                 &nbsp;&nbsp;&nbsp;&nbsp;
-                <button id="leaveButton" type="button" onclick=LeaveRoom()>Leave room</button>
+                <button id="leaveButton" type="button" disabled onclick=LeaveRoom()>Leave room</button>
                  <br><br>
                 <form name="form1" method="post" action="">
                 <input id="raiseInput" size="6">
-                    <button id="raiseButton" type="button" onclick="document.form1.submit()">Raise</button>
+                    <button id="raiseButton" type="button" disabled onclick="document.form1.submit()">Raise</button>
 
                 <br><br>
 
-            <input id="betInput" size="6"><button id="betButton" type="button" onclick="document.form1.submit()">Bet</button>
+            <input id="betInput" size="6"><button id="betButton" disabled type="button" onclick="document.form1.submit()">Bet</button>
             </form>
 
                 </td>
