--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -62,12 +62,12 @@
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
                             <div id="seat1" class="card" valign="top">
-                                <h3 style=text-align:center>John Doe</h3>
-                                <p><b>type:</b>H</p> <!--here the user type-->
-                                <p ><b>state:</b> D</p><!--here the user state-->
-                                <p ><b>chips:</b> 250</p><!--here the user chips-->
-                                <p><b>buys:</b> 3</p><!--here the user buys-->
-                                <p ><b>Hand_Won:</b> 5/10</p><!--here the user Hand_Won-->
+                                <h3 style=text-align:center></h3>
+                                <p><b>type:</b></p> <!--here the user type-->
+                                <p ><b>state:</b> </p><!--here the user state-->
+                                <p ><b>chips:</b> </p><!--here the user chips-->
+                                <p><b>buys:</b> </p><!--here the user buys-->
+                                <p ><b>Hand_Won:</b> </p><!--here the user Hand_Won-->
                             </div>
                         </td>
 
@@ -75,12 +75,12 @@
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
                             <div id="seat2" class="card"   valign="top">
-                                <h3 style=text-align:center>John Doe</h3>
-                                <p ><b>type:</b> H</p> <!--here the user type-->
-                                <p ><b>state:</b> D</p><!--here the user state-->
-                                <p ><b>chips:</b> 250</p><!--here the user chips-->
-                                <p><b>buys:</b> 3</p><!--here the user buys-->
-                                <p ><b>Hand_Won:</b> 5/10</p><!--here the user Hand_Won-->
+                                <h3 style=text-align:center></h3>
+                                <p ><b>type:</b></p> <!--here the user type-->
+                                <p ><b>state:</b></p><!--here the user state-->
+                                <p ><b>chips:</b></p><!--here the user chips-->
+                                <p><b>buys:</b></p><!--here the user buys-->
+                                <p ><b>Hand_Won:</b></p><!--here the user Hand_Won-->
 
                             </div>
 
@@ -89,12 +89,12 @@
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
                             <div id="seat3" class="card"   valign="top">
-                                <h3 style=text-align:center>John Doe</h3>
-                                <p ><b>type:</b> H</p> <!--here the user type-->
-                                <p ><b>state:</b> D</p><!--here the user state-->
-                                <p ><b>chips:</b> 250</p><!--here the user chips-->
-                                <p><b>buys:</b> 3</p><!--here the user buys-->
-                                <p ><b>Hand_Won:</b> 5/10</p><!--here the user Hand_Won-->
+                                <h3 style=text-align:center></h3>
+                                <p ><b>type:</b></p> <!--here the user type-->
+                                <p ><b>state:</b></p><!--here the user state-->
+                                <p ><b>chips:</b></p><!--here the user chips-->
+                                <p><b>buys:</b> </p><!--here the user buys-->
+                                <p ><b>Hand_Won:</b> </p><!--here the user Hand_Won-->
 
                             </div>
 
@@ -106,20 +106,20 @@
                     <tr>
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
-                            <div id="seat4" class="card"   valign="top">
-                                <h3 style=text-align:center>John Doe</h3>
-                                <p ><b>type:</b> H</p> <!--here the user type-->
-                                <p ><b>state:</b> D</p><!--here the user state-->
-                                <p ><b>chips:</b> 250</p><!--here the user chips-->
-                                <p><b>buys:</b> 3</p><!--here the user buys-->
-                                <p ><b>Hand_Won:</b> 5/10</p><!--here the user Hand_Won-->
+                            <div id="seat4" class="card" valign="top" >
+                                <h3 style=text-align:center></h3>
+                                <p ><b>type:</b></p> <!--here the user type-->
+                                <p ><b>state:</b></p><!--here the user state-->
+                                <p ><b>chips:</b> </p><!--here the user chips-->
+                                <p><b>buys:</b></p><!--here the user buys-->
+                                <p ><b>Hand_Won:</b></p><!--here the user Hand_Won-->
 
                             </div>
 
                         </td>
 
                         <td>
-                            &nbsp;&nbsp;<label>Preve Action:</label>&nbsp;<label>C</label>
+                            &nbsp;&nbsp;<label>Preve Action:</label>&nbsp;<label></label>
 
                             <div class="main">
                                 <div class="table">
@@ -159,12 +159,12 @@
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
                             <div id="seat5" class="card"   valign="top">
-                                <h3 style=text-align:center>John Doe</h3>
-                                <p ><b>type:</b> H</p> <!--here the user type-->
-                                <p ><b>state:</b> D</p><!--here the user state-->
-                                <p ><b>chips:</b> 250</p><!--here the user chips-->
-                                <p><b>buys:</b> 3</p><!--here the user buys-->
-                                <p ><b>Hand_Won:</b> 5/10</p><!--here the user Hand_Won-->
+                                <h3 style=text-align:center></h3>
+                                <p ><b>type:</b></p> <!--here the user type-->
+                                <p ><b>state:</b></p><!--here the user state-->
+                                <p ><b>chips:</b></p><!--here the user chips-->
+                                <p><b>buys:</b></p><!--here the user buys-->
+                                <p ><b>Hand_Won:</b></p><!--here the user Hand_Won-->
 
                             </div>
 
@@ -179,12 +179,12 @@
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
                             <div id="seat6" class="card"   valign="top">
-                                <h3 style=text-align:center>John Doe</h3>
-                                 <p ><b>type:</b> H</p> <!--here the user type-->
-                                <p ><b>state:</b> D</p><!--here the user state-->
-                                <p ><b>chips:</b> 250</p><!--here the user chips-->
-                                <p><b>buys:</b> 3</p><!--here the user buys-->
-                                <p ><b>Hand_Won:</b> 5/10</p><!--here the user Hand_Won-->
+                                <h3 style=text-align:center></h3>
+                                 <p ><b>type:</b></p> <!--here the user type-->
+                                <p ><b>state:</b></p><!--here the user state-->
+                                <p ><b>chips:</b></p><!--here the user chips-->
+                                <p><b>buys:</b></p><!--here the user buys-->
+                                <p ><b>Hand_Won:</b></p><!--here the user Hand_Won-->
 
                             </div>
 
@@ -204,12 +204,16 @@
 						<td><b>Total Hand chips</b></td>
 						<td id="maxPot">150</td>
 					</tr>
+                    <tr>
+                        <td><b>pot: </b></td>
+                        <td><label id="pot">0</label></td>
+
+                    </tr>
 					<tr>
 						<td><b>Hand number</b></td>
 						<td>
                             <label id="handNumber">0</label>
-                            <label>/</label>
-                            <label id="handsCount">5</label>
+                            <label>/</label><label id="handsCount">5</label>
                         </td>
 					</tr>
 					<tr>
