--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -119,7 +119,7 @@
                         </td>
 
                         <td>
-                            &nbsp;&nbsp;<label>Preve Action:</label>&nbsp;<label></label>
+                            &nbsp;&nbsp;<label><b>Preve Action:</b></label>&nbsp;<label><b></b></label>
 
                             <div class="main">
                                 <div class="table">
@@ -197,7 +197,7 @@
 
 
 			</td>
-			<td  valign="top" width=25% align="center">
+			<td  valign="top" width=35% align="center">
 				<h2>Game Details</h2>
 				<table border="1" align=center width=75%>
 					<tr>
