--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -50,7 +50,8 @@
 
                 <br><br>
 
-            <input id="betInput" size="6"><button id="betButton" disabled type="button" onclick=updateSelection('b',1)>Bet</button>
+            <input id="betInput" size="6">
+                    <button  id="betButton" disabled type="button" onclick=updateSelection('b',1)>Bet</button>
             </form>
 
                 </td>
@@ -61,7 +62,7 @@
 					<tr>
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
-                            <div id="seat1" class="card" valign="top">
+                            <div id="seat6" class="card" valign="top">
                                 <h3 style=text-align:center></h3>
                                 <p><b>type:</b></p> <!--here the user type-->
                                 <p ><b>state:</b> </p><!--here the user state-->
@@ -74,7 +75,7 @@
 
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
-                            <div id="seat2" class="card"   valign="top">
+                            <div id="seat1" class="card"   valign="top">
                                 <h3 style=text-align:center></h3>
                                 <p ><b>type:</b></p> <!--here the user type-->
                                 <p ><b>state:</b></p><!--here the user state-->
@@ -88,7 +89,7 @@
 
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
-                            <div id="seat3" class="card"   valign="top">
+                            <div id="seat5" class="card"   valign="top">
                                 <h3 style=text-align:center></h3>
                                 <p ><b>type:</b></p> <!--here the user type-->
                                 <p ><b>state:</b></p><!--here the user state-->
@@ -106,7 +107,7 @@
                     <tr>
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
-                            <div id="seat4" class="card" valign="top" >
+                            <div id="seat2" class="card" valign="top" >
                                 <h3 style=text-align:center></h3>
                                 <p ><b>type:</b></p> <!--here the user type-->
                                 <p ><b>state:</b></p><!--here the user state-->
@@ -120,6 +121,9 @@
 
                         <td>
                             &nbsp;&nbsp;<label><b>Preve Action:</b></label>&nbsp;<label><b></b></label>
+                            <br><br>
+                            &nbsp;&nbsp;<label><b>Pot:</b></label>&nbsp;<label><b></b></label>
+
 
                             <div class="main">
                                 <div class="table">
@@ -158,7 +162,7 @@
                         </td>
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
-                            <div id="seat5" class="card"   valign="top">
+                            <div id="seat4" class="card"   valign="top">
                                 <h3 style=text-align:center></h3>
                                 <p ><b>type:</b></p> <!--here the user type-->
                                 <p ><b>state:</b></p><!--here the user state-->
@@ -178,7 +182,7 @@
                             </td>
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
-                            <div id="seat6" class="card"   valign="top">
+                            <div id="seat3" class="card"   valign="top">
                                 <h3 style=text-align:center></h3>
                                  <p ><b>type:</b></p> <!--here the user type-->
                                 <p ><b>state:</b></p><!--here the user state-->
@@ -204,11 +208,7 @@
 						<td><b>Total Hand chips</b></td>
 						<td id="maxPot">150</td>
 					</tr>
-                    <tr>
-                        <td><b>pot: </b></td>
-                        <td><label id="pot">0</label></td>
 
-                    </tr>
 					<tr>
 						<td><b>Hand number</b></td>
 						<td>
