--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -62,7 +62,7 @@
 					<tr>
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
-                            <div id="seat6" class="card" valign="top">
+                            <div id="seat1" class="card" valign="top">
                                 <h3 style=text-align:center></h3>
                                 <p><b>type:</b></p> <!--here the user type-->
                                 <p ><b>state:</b> </p><!--here the user state-->
@@ -75,7 +75,7 @@
 
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
-                            <div id="seat1" class="card"   valign="top">
+                            <div id="seat2" class="card"   valign="top">
                                 <h3 style=text-align:center></h3>
                                 <p ><b>type:</b></p> <!--here the user type-->
                                 <p ><b>state:</b></p><!--here the user state-->
@@ -89,7 +89,7 @@
 
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
-                            <div id="seat5" class="card"   valign="top">
+                            <div id="seat3" class="card"   valign="top">
                                 <h3 style=text-align:center></h3>
                                 <p ><b>type:</b></p> <!--here the user type-->
                                 <p ><b>state:</b></p><!--here the user state-->
@@ -107,7 +107,7 @@
                     <tr>
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
-                            <div id="seat2" class="card" valign="top" >
+                            <div id="seat4" class="card" valign="top" >
                                 <h3 style=text-align:center></h3>
                                 <p ><b>type:</b></p> <!--here the user type-->
                                 <p ><b>state:</b></p><!--here the user state-->
@@ -122,7 +122,7 @@
                         <td>
                             &nbsp;&nbsp;<label><b>Preve Action:</b></label>&nbsp;<label><b></b></label>
                             <br><br>
-                            &nbsp;&nbsp;<label><b>Pot:</b></label>&nbsp;<label><b></b></label>
+                            &nbsp;&nbsp;<label><b>Pot:</b></label>&nbsp;<label id="Pot"><b></b></label>
 
 
                             <div class="main">
@@ -162,7 +162,7 @@
                         </td>
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
-                            <div id="seat4" class="card"   valign="top">
+                            <div id="seat5" class="card"   valign="top">
                                 <h3 style=text-align:center></h3>
                                 <p ><b>type:</b></p> <!--here the user type-->
                                 <p ><b>state:</b></p><!--here the user state-->
@@ -182,7 +182,7 @@
                             </td>
                         <td width="170px" valign="top">
                             <!--כאן יכול להיכנס שחקן-->
-                            <div id="seat3" class="card"   valign="top">
+                            <div id="seat6" class="card"   valign="top">
                                 <h3 style=text-align:center></h3>
                                  <p ><b>type:</b></p> <!--here the user type-->
                                 <p ><b>state:</b></p><!--here the user state-->
