--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -52,6 +52,8 @@
                 <input id="betInput" size="6" type="number" name="quantity" min="1" max="5">
                 <button  id="betButton" disabled type="button" onclick=updateSelection('b',document.getElementById('betInput').value)>Bet</button>
             </form>
+                <br><br>
+                <label><b>The max raise is: </b></label><label>5</label>
 
                 </td>
 
