add max raise label

--- a/chatWebApp/web/pages/gameRoom/room.html
+++ b/chatWebApp/web/pages/gameRoom/room.html
@@ -53,8 +53,7 @@
                 <button  id="betButton" disabled type="button" onclick=updateSelection('b',document.getElementById('betInput').value)>Bet</button>
             </form>
                 <br><br>
-                <label><b>The max raise is: </b></label><label>5</label>
-
+                <label id="maxValueLabel"><b></b></label>
                 </td>
 
 			<td  valign="top" width=50% >
